# enKrypt

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: ci.yml
crypto-core/: Cargo.toml
crypto-core/src/: error.rs  keys.rs  lib.rs  model.rs  ops.rs  vault.rs
crypto-core/tests/: roundtrip.rs
deploy/: nginx.conf
scripts/: gen-fixtures.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: theme-init.js
web/src/: App.svelte  app.css
web/src/lib/components/: Dialog.svelte  DropZone.svelte  Empty.svelte  Icon.svelte  PassphraseInput.svelte  Sidebar.svelte  SignatureBadge.svelte  Spinner.svelte  StatusBar.svelte  Toasts.svelte
web/src/lib/db/: idb.ts
web/src/lib/stores/: keyring.svelte.ts  nav.svelte.ts  theme.svelte.ts  toast.svelte.ts
web/src/lib/util/: format.ts  passphrase.ts
web/src/lib/views/: DecryptView.svelte  EncryptView.svelte  FirstRunDialog.svelte  ImportDialog.svelte  KeyGenDialog.svelte  KeyPropertiesDialog.svelte  KeysView.svelte  RevokeDialog.svelte  SettingsView.svelte  SignVerifyView.svelte  TextView.svelte  VaultUnlock.svelte
web/src/lib/worker/: crypto.worker.ts  protocol.ts  rpc.ts
web/tests/: rpc.test.ts  util.test.ts
